--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,7 @@
-title: Dinky theme
-description: Dinky is a red hot theme for GitHub Pages.
-show_downloads: true
+title: Developer Bastian
+description: An Unreal journey building a game based on Lyra - without C++
+show_install: true
+show_home: true
+show_aboutme: true
 google_analytics:
 theme: jekyll-theme-dinky
