Added menu tutorial: https://studio.youtube.com/video/kBAs5O_YpzY

--- a/_config.yml
+++ b/_config.yml
@@ -5,5 +5,6 @@ show_home: true
 show_aboutme: true
 show_emptymap: true
 show_appearance: true
+show_menu: true
 google_analytics:
 theme: jekyll-theme-dinky
